# v2/frontend/openapi.json
@@ -308,6 +308,11 @@
       },
       "QuestionView": {
         "properties": {
+          "autocomplete": {
+            "default": "off",
+            "title": "Autocomplete",
+            "type": "string"
+          },
           "can_defer": {
             "title": "Can Defer",
             "type": "boolean"
